; ModuleID = '/home/carl/AnghaBench/streem/src/extr_node.c_node_method_new.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_node.c_node_method_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32*, i32*, i32 }

@NODE_LAMBDA = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"self\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @node_method_new(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = call %struct.TYPE_3__* @malloc(i32 24)
  store %struct.TYPE_3__* %6, %struct.TYPE_3__** %5, align 8
  %7 = load i32, i32* @NODE_LAMBDA, align 4
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 2
  store i32 %7, i32* %9, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %16

12:                                               ; preds = %2
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @node_str_new(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 4)
  %15 = call i32 @node_args_prepend(i32* %13, i32 %14)
  br label %21

16:                                               ; preds = %2
  %17 = call i32* (...) @node_args_new()
  store i32* %17, i32** %3, align 8
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @node_str_new(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 4)
  %20 = call i32 @node_args_add(i32* %18, i32 %19)
  br label %21

21:                                               ; preds = %16, %12
  %22 = load i32*, i32** %3, align 8
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 1
  store i32* %22, i32** %24, align 8
  %25 = load i32*, i32** %4, align 8
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 0
  store i32* %25, i32** %27, align 8
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %29 = bitcast %struct.TYPE_3__* %28 to i32*
  ret i32* %29
}

declare dso_local %struct.TYPE_3__* @malloc(i32) #1

declare dso_local i32 @node_args_prepend(i32*, i32) #1

declare dso_local i32 @node_str_new(i8*, i32) #1

declare dso_local i32* @node_args_new(...) #1

declare dso_local i32 @node_args_add(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
